--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
         <button id="tab-nube" onclick="navigate('nube')">Nube</button>
         <button id="tab-versiculo" onclick="navigate('versiculo')">Versículo</button>
         <button id="tab-videos" onclick="navigate('videos')">Videos</button>
-        <button id="tab-debate" onclick="navigate('debate')">Debate</button>
+        <button id="tab-debate" onclick="navigate('debate')">Comunidad</button>
     </nav>
 </header>
 <main id="main-content">
